--- a/BenCaoGangMu/App.config
+++ b/BenCaoGangMu/App.config
@@ -1,6 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="conString" connectionString="Data Source=覃焕阐\MSSQL2016;Initial Catalog=BenCaoGangMu;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="master_conString" connectionString="Data Source=覃焕阐\MSSQL2016;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="conString2" connectionString="Data Source=.;database=TreeViewDemo;uid=CCTV;pwd=123456"/>
+    <add name="CCTVConnectionString" connectionString="Data Source=.;Initial Catalog=BenCaoGangMu;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
 </configuration>
